# ai-knowledge-base

./: .env.example  .gitignore  README.md  docker-compose.yaml  package.json  pnpm-lock.yaml  tsconfig.json
apps/ingest-api/: Dockerfile  index.py  main.py  package.json  pyproject.toml
apps/web/: Dockerfile  entrypoint.sh  package.json  tsconfig.json
apps/web/app/: layout.tsx  page.tsx
apps/web/app/(protected)/dashboard/: page.tsx
apps/web/app/api/auth/[...nextauth]/: route.ts
apps/web/app/api/health/: route.ts
apps/web/app/api/upload/: route.ts
apps/web/app/upload/: page.tsx
apps/web/components/ui/: logout.tsx
apps/web/components/upload/: UploadDropzone.tsx
apps/web/lib/: auth.ts  prisma.ts  queue.ts  redis.ts  storage.ts  ws-client.ts
apps/web/prisma/: schema.prisma  seed.ts
apps/web/prisma/migrations/20250929213737_init/: migration.sql
apps/web/prisma/migrations/20250930173909_y/: migration.sql
apps/web/prisma/migrations/20250930174912_user_fix/: migration.sql
apps/web/prisma/migrations/20251001171328_dev/: migration.sql
apps/websocket-server/: Dockerfile  package.json  pnpm-lock.yaml  ws-server.ts
apps/worker/: Dockerfile  package.json  pyproject.toml  worker.py
apps/worker/parsers/: md.py  pdf.py  txt.py
apps/worker/worker/: __init__.py  events.py  main.py  redis_queue.py  storage.py
apps/worker/worker/chunking/: __init__.py  token_chunker.py
apps/worker/worker/embeddings/: __init__.py  client.py
apps/worker/worker/models/: __init__.py  ingest_job.py  progress_event.py
apps/worker/worker/parsers/: __init__.py  md.py  pdf.py  txt.py
apps/worker/worker/vector_stores/: __init__.py  pinecone_store.py
infra/: docker-compose.yaml  package.json
