# pyproject.toml
# Purpose: Define the worker's Python project and dependencies.
# Matches the "Python worker + Redis + Pydantic + pypdf" stack in the plan.  :contentReference[oaicite:2]{index=2}
[project]
name = "worker"
version = "0.1.0"
description = "Background worker for parsing documents"
requires-python = ">=3.11"

# Keep versions loose for now; pin later when stable.
dependencies = [
  "pydantic>=2",
  "redis>=5",
  "httpx>=0.27",         # will be handy later for APIs
  "backoff>=2",          # retries (Week 3 Day 3)
  "structlog>=24",       # structured logs (Week 6 polish too)
  "pypdf>=5",            # PDF parsing (today)
  "openai",            # added Day 3
  "pinecone-client",   # added Day 4
]

[tool.uv]  # you’re already using uv in this repo
package = true

[tool.setuptools]
packages = ["worker"]  # only package the worker module